# Tetris

./: CMakeLists.txt  README.md  Tetris.sln
Tetris/: Main.cpp  Tetris.vcxproj  Tetris.vcxproj.filters
Tetris/include/: Button.hpp  Figures.h  Header.h  ItIsGame.h  Platform.h  Tetris.hpp
Tetris/src/: Button.cpp  Figures.cpp  ItIsGame.cpp  Main.cpp  Platform.cpp  Tetris.cpp
Tetris/x64/Debug/: Tetris.exe.recipe  vc143.idb
Tetris/x64/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
